# isGameModel

./: .gitignore  README.md  mid_model.py  pyproject.toml  simple_model.py  transformer_model.py  transformer_training.ipynb
